--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
                 <div class="login-stage">
                     <div id="login-title-shell" class="login-title-shell">
                         <p class="login-kicker">Sentinel Auth</p>
-                        <h1 id="login-title" class="login-title">Secure access with lift.</h1>
+                        <h1 id="login-title" class="login-title">Secure access with Sentinel.</h1>
                     </div>
                     <div class="login-actions login-actions-row">
                         <button id="launch-register-button" class="btn btn-secondary btn-launch" type="button">Sign Up</button>
