Restyle governance dashboard to match site theme; rename nav tabs

--- a/frontend/agent.html
+++ b/frontend/agent.html
@@ -20,8 +20,8 @@
                 <a class="brand-link" href="/">Sentinel Auth</a>
                 <div class="topbar-links">
                     <a class="topbar-link" href="/">Login</a>
-                    <a class="topbar-link" href="/dashboard.html">Dashboard</a>
-                    <a class="topbar-link" href="/activity.html">Activity Feed</a>
+                    <a class="topbar-link" href="/dashboard.html">Keys</a>
+                    <a class="topbar-link" href="/activity.html">Dashboard</a>
                     <a class="topbar-link topbar-link-active" href="/agent.html">Agent Demo</a>
                 </div>
             </nav>
