Merge: wallet-linked API keys + dropdowns + 2FA from friend

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -99,6 +99,16 @@
                                 <span>Owner name</span>
                                 <input id="owner-name" type="text" placeholder="Optional">
                             </label>
+                            <div style="display:grid; grid-template-columns:1fr 1fr; gap:14px;">
+                                <label>
+                                    <span>Wallet label</span>
+                                    <input id="wallet-label" type="text" placeholder="e.g. GPT Agent" required>
+                                </label>
+                                <label>
+                                    <span>Wallet address</span>
+                                    <input id="wallet-address" type="text" placeholder="Solana address" required>
+                                </label>
+                            </div>
                             <label>
                                 <span>Use case</span>
                                 <textarea id="use-case" rows="4"
