--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -821,15 +821,8 @@
                         <span class="gov-panel-badge" id="agent-count">0 registered</span>
                     </div>
                     <div class="gov-panel-body">
-                        <div class="agent-add-row">
-                            <input type="text" id="new-agent-name" placeholder="Agent name (required)" />
-                            <input type="text" id="new-agent-wallet" placeholder="Wallet address"
-                                style="max-width:170px;" />
-                            <button class="btn btn-primary" id="add-agent-btn"
-                                style="padding:10px 16px; font-size:0.88rem;">Add</button>
-                        </div>
                         <div id="agent-list">
-                            <div class="empty-state">Load dashboard to see registered agents.</div>
+                            <div class="empty-state">Load dashboard to see linked wallets.</div>
                         </div>
                     </div>
                 </section>
