--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -40,34 +40,45 @@
                                 <h3>Signed in as</h3>
                                 <code id="account-summary">Not signed in.</code>
                             </div>
+                            <div class="output-card compact-card compact-2fa-card">
+                                <h3>Verify Your Account 2FA</h3>
+                                <p id="phone-2fa-summary" class="muted">No verified phone number.</p>
+                            </div>
+                            <button id="open-phone-2fa-button" class="btn btn-secondary" type="button">Verify phone</button>
                             <button id="logout-button" class="btn btn-ghost" type="button" disabled>Logout</button>
-                            <section class="panel">
-                                <div class="section-heading">
-                                    <p class="eyebrow">Security</p>
-                                    <h2>Phone verification</h2>
-                                </div>
-                                <p class="muted">Optional 2FA setup. Verify a phone number on your account so you can use it as an additional security contact.</p>
-                                <div class="output-card">
-                                    <h3>Current status</h3>
-                                    <code id="phone-2fa-summary">No verified phone number.</code>
-                                    <p id="phone-2fa-status" class="muted">Request a code, then confirm it here. In mock mode the code is shown in the status message.</p>
-                                </div>
-                                <form id="phone-2fa-form" class="stack">
-                                    <label>
-                                        <span>Phone number</span>
-                                        <input id="phone-2fa-number" type="tel" placeholder="+1 555 555 5555" required>
-                                    </label>
-                                    <div class="action-row">
-                                        <button id="phone-2fa-request-button" class="btn btn-secondary" type="button">Send code</button>
-                                        <button id="phone-2fa-verify-button" class="btn btn-primary" type="submit">Verify code</button>
-                                    </div>
-                                    <label>
-                                        <span>Verification code</span>
-                                        <input id="phone-2fa-code" type="text" inputmode="numeric" placeholder="6-digit code" minlength="4" maxlength="12" required>
-                                    </label>
-                                </form>
-                            </section>
                         </div>
+                    </div>
+                </section>
+
+                <section id="phone-2fa-overlay" class="auth-overlay auth-overlay-hidden" aria-hidden="true">
+                    <div class="auth-backdrop"></div>
+                    <div class="auth-dialog panel phone-2fa-dialog">
+                        <div class="auth-dialog-header">
+                            <div>
+                                <p class="eyebrow">Security</p>
+                                <h2>Verify your account 2FA</h2>
+                            </div>
+                            <button id="close-phone-2fa-button" class="btn btn-ghost btn-close" type="button">Close</button>
+                        </div>
+                        <p class="muted">Optional 2FA setup. Verify a phone number on your account so you can use it as an additional security contact.</p>
+                        <div class="output-card">
+                            <h3>Current status</h3>
+                            <p id="phone-2fa-status" class="muted">Request a code, then confirm it here. In mock mode the code is shown in the status message.</p>
+                        </div>
+                        <form id="phone-2fa-form" class="stack">
+                            <label>
+                                <span>Phone number</span>
+                                <input id="phone-2fa-number" type="tel" placeholder="+1 555 555 5555" required>
+                            </label>
+                            <div class="action-row">
+                                <button id="phone-2fa-request-button" class="btn btn-secondary" type="button">Send code</button>
+                                <button id="phone-2fa-verify-button" class="btn btn-primary" type="submit">Verify code</button>
+                            </div>
+                            <label>
+                                <span>Verification code</span>
+                                <input id="phone-2fa-code" type="text" inputmode="numeric" placeholder="6-digit code" minlength="4" maxlength="12" required>
+                            </label>
+                        </form>
                     </div>
                 </section>
 
