--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,27 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Space+Grotesk:wght@400;500;700&family=Syne:wght@700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Space+Grotesk:wght@400;500;700&family=Syne:wght@700;800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body class="login-body">
     <div class="login-shell">
         <canvas id="gravity-canvas" class="gravity-canvas" aria-hidden="true"></canvas>
+
+        <div id="account-bar" class="account-bar account-bar-hidden">
+            <div class="account-bar-info">
+                <span class="account-bar-label">Signed in as</span>
+                <strong id="account-bar-identity"></strong>
+            </div>
+            <nav class="account-bar-nav">
+                <a class="btn btn-ghost btn-sm" href="/dashboard.html">Keys</a>
+                <a class="btn btn-ghost btn-sm" href="/activity.html">Dashboard</a>
+                <a class="btn btn-ghost btn-sm" href="/agent.html">Agent Demo</a>
+                <button id="account-bar-logout" class="btn btn-ghost btn-sm" type="button">Logout</button>
+            </nav>
+        </div>
 
         <main class="login-layout">
             <section class="login-minimal">
@@ -21,7 +38,8 @@
                         <h1 id="login-title" class="login-title">Secure access with Sentinel.</h1>
                     </div>
                     <div class="login-actions login-actions-row">
-                        <button id="launch-register-button" class="btn btn-secondary btn-launch" type="button">Sign Up</button>
+                        <button id="launch-register-button" class="btn btn-secondary btn-launch" type="button">Sign
+                            Up</button>
                         <button id="launch-login-button" class="btn btn-primary btn-launch" type="button">Login</button>
                     </div>
                 </div>
@@ -83,4 +101,5 @@
 
     <script type="module" src="/app.js"></script>
 </body>
+
 </html>
