--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -19,6 +19,7 @@
             <nav class="topbar panel">
                 <a class="brand-link" href="/">Sentinel Auth</a>
                 <div class="topbar-links">
+                    <a class="topbar-link" href="/documentation/index.html">Documentation</a>
                     <a class="topbar-link topbar-link-active" href="/dashboard.html">Keys</a>
                     <a class="topbar-link" href="/activity.html">Dashboard</a>
                     <a class="topbar-link" href="/agent.html">Agent Demo</a>
