front end changes

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -23,6 +23,7 @@
                     <a class="topbar-link topbar-link-active" href="/dashboard.html">Keys</a>
                     <a class="topbar-link" href="/activity.html">Dashboard</a>
                     <a class="topbar-link" href="/agent.html">Agent Demo</a>
+                    <a class="topbar-link" href="/enterprise.html">Governance</a>
                 </div>
             </nav>
 
