--- a/frontend/enterprise.html
+++ b/frontend/enterprise.html
@@ -1010,8 +1010,9 @@
                 style="font-size:0.75rem; color:var(--ent-muted); font-weight:400; margin-left:0.25rem;">Enterprise</span>
         </div>
         <nav class="topbar-nav">
-            <a href="/dashboard.html">Dashboard</a>
-            <a href="/activity.html">Activity</a>
+            <a href="/documentation/index.html">Documentation</a>
+            <a href="/dashboard.html">Keys</a>
+            <a href="/activity.html">Dashboard</a>
             <a href="/agent.html">Agent Demo</a>
             <a href="/enterprise.html" class="active">Governance</a>
         </nav>
