--- a/frontend/enterprise.html
+++ b/frontend/enterprise.html
@@ -1003,6 +1003,8 @@
 </head>
 
 <body>
+    <canvas id="ambient-canvas" class="ambient-canvas" aria-hidden="true"></canvas>
+    <div class="page-backdrop-title" data-background-title>Sentinel Auth</div>
 
     <!-- Top Bar -->
     <header class="topbar">
@@ -1187,6 +1189,7 @@
     </div>
 
     <script type="module" src="./enterprise.js"></script>
+    <script type="module" src="./background.js"></script>
 </body>
 
 </html>
