--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -684,6 +684,8 @@
 </head>
 
 <body>
+    <canvas id="ambient-canvas" class="ambient-canvas" aria-hidden="true"></canvas>
+    <div class="page-backdrop-title" data-background-title>Sentinel Auth</div>
     <div class="page-shell">
         <main class="layout">
             <!-- Nav -->
@@ -897,6 +899,7 @@
 
     <div id="toast-stack"></div>
     <script type="module" src="./activity.js"></script>
+    <script type="module" src="./background.js"></script>
 </body>
 
 </html>
