--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <canvas id="ambient-canvas" class="ambient-canvas" aria-hidden="true"></canvas>
+    <div class="page-backdrop-title" data-background-title>Sentinel Auth</div>
     <div class="page-shell">
         <main class="layout">
             <nav class="topbar panel">
@@ -267,6 +269,7 @@
     </div>
 
     <script type="module" src="/dashboard.js"></script>
+    <script type="module" src="/background.js"></script>
 </body>
 
 </html>
