actually final commits

--- a/frontend/enterprise.html
+++ b/frontend/enterprise.html
@@ -39,9 +39,9 @@
         body {
             font-family: 'Inter', sans-serif;
             background:
-                radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.72), rgba(255, 255, 255, 0) 28%),
-                radial-gradient(circle at 50% 50%, rgba(215, 202, 184, 0.28), rgba(215, 202, 184, 0) 54%),
-                linear-gradient(180deg, #f7f4ef 0%, #f0ebe3 55%, #e9e2d8 100%);
+                radial-gradient(circle at 30% 22%, rgba(241, 228, 204, 0.9), rgba(241, 228, 204, 0) 30%),
+                radial-gradient(circle at 72% 32%, rgba(224, 205, 174, 0.72), rgba(224, 205, 174, 0) 36%),
+                linear-gradient(180deg, #f1e3ca 0%, #ead9bc 54%, #e2cfaf 100%);
             color: var(--ent-text);
             min-height: 100vh;
             display: flex;
@@ -1015,9 +1015,9 @@
                 style="font-size:0.75rem; color:var(--ent-muted); font-weight:400; margin-left:0.25rem;">Enterprise</span>
         </div>
         <nav class="topbar-nav">
-            <a href="/documentation/index.html">Documentation</a>
-            <a href="/dashboard.html">Keys</a>
             <a href="/activity.html" class="active">Dashboard</a>
+            <a href="/dashboard.html">Keys</a>
+            <a href="/documentation/index.html">Documentation</a>
             <a href="/agent.html">Agent Demo</a>
         </nav>
         <div class="topbar-actions">
