--- a/frontend/documentation/index.html
+++ b/frontend/documentation/index.html
@@ -196,13 +196,13 @@
     <div class="page-shell">
         <nav class="topbar panel" style="margin-bottom: 32px; max-width: 1400px; margin-left: auto; margin-right: auto;">
             <a class="brand-link" href="/">
-                <svg width="24" height="24" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-right: 8px;">
+                <!-- <svg width="24" height="24" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-right: 8px;">
                     <rect width="120" height="120" rx="28" fill="#1d1813" />
                     <rect width="104" height="104" x="8" y="8" rx="20" fill="none" stroke="#6a5d4b" stroke-width="2" opacity="0.3" />
                     <path d="M 82 42 C 82 24, 38 24, 38 42 C 38 56, 82 64, 82 78 C 82 96, 38 96, 38 78" fill="none" stroke="#c99863" stroke-width="16" stroke-linecap="round" />
                     <circle cx="82" cy="42" r="4" fill="#e8dfd2" />
                     <circle cx="38" cy="78" r="4" fill="#e8dfd2" />
-                </svg>
+                </svg> -->
                 Sentinel Auth
             </a>
             <div class="topbar-links">
